bookmedik-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookmedik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookmedik
  template:
    metadata:
      labels:
        app: bookmedik
    spec:
      containers:
      - name: bookmedik
        image: davidrgfoss/kubernetes-p1:v1
        ports:
        - containerPort: 80
